@@ -21,6 +21,20 @@ task bintrayCredentialsCheck {
   }
 }
 
+def baseJvmArgs = [
+  "--illegal-access=warn",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "-XX:-MaxFDLimit"
+]
+project.ext.set("baseJvmArgs", baseJvmArgs)
+
 allprojects {
   apply plugin: "java"
   apply plugin: "jacoco"
@@ -54,17 +68,34 @@ allprojects {
     testCompile "junit:junit:${junitVersion}"
     testCompile "org.mockito:mockito-core:${mockitoVersion}"
   }
+  
+  compileJava {
+    options.compilerArgs += "-proc:none"
+    options.compilerArgs += "-Xlint:unchecked"
+  }
+
+  compileTestJava {
+    options.compilerArgs += "-proc:none"
+    options.compilerArgs += "-Xlint:unchecked"
+  }
+  
+  tasks.withType(JavaCompile) {
+    options.fork = true
+    options.incremental = true
+  }
 
   test {
     exclude "**/*IT.class"
+    jvmArgs += baseJvmArgs
   }
-  
+
   task integrationTest(type: Test, description: "Runs integration tests.", group: "Verification") {
     include "**/*IT.class"
+    jvmArgs += baseJvmArgs
   }
 
   jacoco {
-    toolVersion = "0.8.2"
+    toolVersion = "0.8.3"
   }
   
   javadoc {
@@ -74,9 +105,9 @@ allprojects {
   }
 
   jacocoTestReport {
-    additionalSourceDirs = files(sourceSets.main.allSource.srcDirs)
-    sourceDirectories = files(sourceSets.main.allSource.srcDirs)
-    classDirectories = files(sourceSets.main.output)
+    additionalSourceDirs.from = files(sourceSets.main.allSource.srcDirs)
+    sourceDirectories.from = files(sourceSets.main.allSource.srcDirs)
+    classDirectories.from = files(sourceSets.main.output)
     reports {
       html.enabled true
       xml.enabled true
@@ -98,10 +129,10 @@ subprojects {
 
 task jacocoRootReport(type: JacocoReport) {
   dependsOn = allprojects.test
-  additionalSourceDirs = files(allprojects.sourceSets.main.allSource.srcDirs)
-  sourceDirectories = files(allprojects.sourceSets.main.allSource.srcDirs)
-  classDirectories = files(allprojects.sourceSets.main.output)
-  executionData = files(allprojects.jacocoTestReport.executionData)
+  additionalSourceDirs.from = files(allprojects.sourceSets.main.allSource.srcDirs)
+  sourceDirectories.from = files(allprojects.sourceSets.main.allSource.srcDirs)
+  classDirectories.from = files(allprojects.sourceSets.main.output)
+  executionData.from = files(allprojects.jacocoTestReport.executionData)
   reports {
     html.enabled true
     xml.enabled true
@@ -111,12 +142,12 @@ task jacocoRootReport(type: JacocoReport) {
     true
   }
   doFirst {
-    executionData = files(executionData.findAll {
+    executionData.from = files(executionData.findAll {
       it.exists()
     })
   }
   afterEvaluate {
-    classDirectories = files(classDirectories.files.collect {
+    classDirectories.from = files(classDirectories.files.collect {
       fileTree(dir: it, exclude: ["sample/**", "**/*Uncovered*"])
     })
   }
@@ -143,7 +174,7 @@ task addLauncherApps() {
 task launch() {
   dependsOn allprojects*.tasks*.findByName("testClasses")
   doLast {
-    def baseJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
+    def perfJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
                       "-XX:+UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
                       "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " + 
                       "-Dlauncher.package.compress.level=3"
@@ -152,7 +183,7 @@ task launch() {
       classpath = project(":").launcherClasspath
       main = "com.obsidiandynamics.launcher.Launcher"
       args = project(":").launcherClasses
-      jvmArgs = Arrays.asList baseJvmArgs.split(" ")
+      jvmArgs = Arrays.asList(perfJvmArgs.split(" ")) + baseJvmArgs
       standardInput = System.in
     }
   }
